--- a/RedditClone/client/package.json
+++ b/RedditClone/client/package.json
@@ -11,9 +11,11 @@
     "@testing-library/user-event": "^12.8.3",
     "antd": "^4.15.2",
     "axios": "^0.21.1",
+    "connected-react-router": "^6.9.1",
     "jquery": "^3.6.0",
     "jwt-decode": "^3.1.2",
     "moment": "^2.29.1",
+    "ramda": "^0.27.1",
     "react": "^17.0.2",
     "react-bootstrap": "^1.5.2",
     "react-dom": "^17.0.2",
@@ -50,5 +52,11 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "babel-preset-env": "^1.7.0",
+    "enzyme": "^3.11.0",
+    "enzyme-adapter-react-16": "^1.15.6",
+    "jest-serializer-html": "^7.1.0"
   }
 }
