--- a/client/package.json
+++ b/client/package.json
@@ -59,9 +59,11 @@
     ]
   },
   "devDependencies": {
+    "@wojtekmaj/enzyme-adapter-react-17": "^0.6.3",
     "babel-preset-env": "^1.7.0",
     "enzyme": "^3.11.0",
-    "enzyme-adapter-react-16": "^1.15.6",
-    "jest-serializer-html": "^7.1.0"
+    "jest-serializer-html": "^7.1.0",
+    "jsdom": "^17.0.0",
+    "jsdom-global": "^3.0.2"
   }
 }
