--- a/client/package.json
+++ b/client/package.json
@@ -32,6 +32,7 @@
     "react-scripts": "4.0.3",
     "react-toastify": "^8.0.2",
     "redux": "^4.0.5",
+    "redux-starter-kit": "^2.0.0",
     "redux-thunk": "^2.3.0",
     "uuid": "^8.3.2",
     "web-vitals": "^1.1.1"
